Bugfix/UX: Disallow growing template dropdown too large
This dropdown's width gets dynamically calculated based on what templates are available on the specific machine, in its 'html' directory

--- a/html/meta-gallery/index.css
+++ b/html/meta-gallery/index.css
@@ -87,6 +87,10 @@
   grid-area:  desc;
 }
 
+#gallery-template {
+  max-width: 305px;
+}
+
 #starter-button {
   align-self: stretch;
   grid-area:  config;
